--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,6 +1,5 @@
 * {
   padding: 0;
-  margin: 0;
 }
 
 header {
@@ -127,6 +126,315 @@ body {
   border: 21;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(255, 255, 255, 0.219);
-  width: 40vw;
+  width: 30vw;
   align-self: center;
+}
+
+.hrSpan {
+  font-size: 1.5em;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+.form-group {
+  display: block;
+}
+
+.email-group {
+  justify-content: space-between;
+  box-sizing: border-box;
+  align-items: center;
+  display: flex;
+  font-weight: 700;
+  width: 100vw;
+  padding-bottom: 8px;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  flex-direction: column;
+}
+
+.password-group {
+  justify-content: space-between;
+  box-sizing: border-box;
+  align-items: center;
+  display: flex;
+  font-weight: 700;
+  width: 100vw;
+  padding-bottom: 8px;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  flex-direction: column;
+}
+
+.email-span {
+  font-weight: 700;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-family: spotify-circular, Helvetica, Arial, sans-serif;
+  margin-left: 1em;
+  align-self: start;
+}
+
+.password-span {
+  font-weight: 700;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-family: spotify-circular, Helvetica, Arial, sans-serif;
+  margin-left: 1em;
+  align-self: start;
+}
+
+.email-input {
+  appearance: none;
+  background-image: none;
+  border: 0px;
+  display: block;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 400;
+  width: 95vw;
+  box-sizing: border-box;
+  font-family: spotify-circular, Helvetica, Arial, sans-serif;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  border-radius: 4px;
+  padding: 14px;
+  background-color: var(--background-base, #ffffff);
+  box-shadow: inset 0 0 0 1px var(--essential-subdued, #878787);
+  color: var(--text-base, #000000);
+}
+
+.password-input {
+  appearance: none;
+  background-image: none;
+  border: 0px;
+  display: block;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 400;
+  width: 95vw;
+  box-sizing: border-box;
+  font-family: spotify-circular, Helvetica, Arial, sans-serif;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  border-radius: 4px;
+  padding: 14px;
+  background-color: var(--background-base, #ffffff);
+  box-shadow: inset 0 0 0 1px var(--essential-subdued, #878787);
+  color: var(--text-base, #000000);
+}
+
+.resetPassword {
+  color: inherit;
+  align-items: center;
+  text-decoration: none;
+  box-sizing: border-box;
+  font-family: spotify-circular, Helvetica, Arial, sans-serif;
+  margin-left: 1em;
+}
+
+.submitForm {
+  width: 90vw;
+}
+
+.memorize {
+  box-sizing: border-box;
+  font-family: spotify-circular, Helvetica, Arial, sans-serif;
+  align-items: center;
+  display: flex;
+  padding-bottom: 4px;
+  padding-top: 4px;
+  position: relative;
+  min-height: 32px;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 1em;
+}
+
+.loginRemember {
+  border-style: 1em solid black;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0px;
+  position: relative;
+  width: 1px;
+}
+
+.indicadorRemember {
+  border: 1px solid black;
+  box-sizing: border-box;
+  font-family: spotify-circular, Helvetica, Arial, sans-serif;
+  background-color: #ffffff;
+  border-radius: 3px;
+  display: inline-block;
+  height: 16px;
+  user-select: none;
+  width: 16px;
+  flex-shrink: 0;
+  top: 4px;
+  position: absolute;
+  margin-left: 1em;
+  margin-right: 0.3em;
+  margin-top: 0.2em;
+}
+
+input:checked + label .indicadorRemember {
+  background-color: #169b45;
+  border-width: 0px;
+}
+
+.indicadorRemember::before {
+  box-sizing: border-box;
+  background-color: unset;
+  border-bottom-width: 2px;
+  border-bottom-style: solid;
+  border-left-width: 2px;
+  border-left-style: solid;
+  border-color: var(--background-base, #ffffff);
+  display: block;
+  content: "";
+  height: 5px;
+  width: 9px;
+  position: absolute;
+  top: 46%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0px) rotate(-48deg);
+}
+
+.indicadorRemember::after {
+  display: block;
+  position: absolute;
+  pointer-events: none;
+  transition: border-color 200ms ease-in 0s;
+  box-sizing: border-box;
+  width: calc(100% + 12px);
+  height: calc(100% + 12px);
+  top: -6px;
+  left: -6px;
+  background: transparent;
+  border-radius: 6px;
+  border: 3px solid transparent;
+  content: "";
+}
+
+.rememberSpan {
+  color: #000000;
+  font-size: 1rem;
+  line-height: 1rem;
+  font-weight: 400;
+  margin-left: 2.3em;
+}
+
+.contentBtnSubmit {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+}
+
+.btnSubmit {
+  box-sizing: border-box;
+  font-family: spotify-circular, Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 700;
+  background-color: transparent;
+  border: 0px;
+  border-radius: 500px;
+  display: inline-block;
+  position: absolute;
+  text-align: center;
+  text-decoration: none;
+  text-transform: none;
+  touch-action: manipulation;
+  transition-duration: 33ms;
+  transition-property: background-color, border-color, color, box-shadow, filter,
+    transform;
+  user-select: none;
+  vertical-align: middle;
+  transform: translate3d(0px, 0px, 0px);
+  padding: 0px;
+  align-self: center;
+  position: relative;
+  background-color: var(--background-base, #1ed760);
+  color: var(--text-base, #000000);
+  border-radius: 500px;
+  font-size: inherit;
+  padding: 14px 32px;
+  width: 90vw;
+  align-content: center;
+}
+
+.hrSeparatorForm {
+  display: block;
+  unicode-bidi: isolate;
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
+  margin-inline-start: auto;
+  margin-inline-end: auto;
+  overflow: hidden;
+  border-style: inset;
+  border-width: 1px;
+  width: 100vw;
+  margin-top: 3em;
+}
+
+.sigupTXT {
+  text-align: center;
+  box-sizing: border-box;
+  font-family: spotify-circular, Helvetica, Arial, sans-serif;
+  margin-top: 1.5em;
+  margin-bottom: 0;
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+  padding-bottom: 20px;
+  color: inherit;
+  font-weight: 900;
+}
+
+.signupBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  font-family: spotify-circular, Helvetica, Arial, sans-serif;
+  line-height: 20px;
+  font-weight: 700;
+  background-color: transparent;
+  border-radius: 500px;
+  text-align: center;
+  text-decoration: none;
+  text-transform: none;
+  touch-action: manipulation;
+  transition-duration: 33ms;
+  transition-property: background-color, border-color, color, box-shadow, filter,
+    transform;
+  user-select: none;
+  vertical-align: middle;
+  padding: 13px 31px;
+  position: relative;
+  border: 1px solid var(--essential-subdued, #878787);
+  color: var(--text-base, #000000);
+  width: 90vw;
+  height: 5vh;
+}
+
+.signupBtn::after {
+  display: block;
+  position: relative;
+  pointer-events: none;
+  transition: border-color 200ms ease-in 0s;
+  box-sizing: border-box;
+  top: -6px;
+  left: -6px;
+  background: transparent;
+  border-radius: 500px;
+  border: 3px solid transparent;
+  content: "";
+}
+
+.signupBtntext {
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
 }
